--- a/app/package.json
+++ b/app/package.json
@@ -13,6 +13,8 @@
     "dotenv": "^16.3.1",
     "ejs": "^3.1.9",
     "express": "^4.18.2",
+    "request": "2.88.2",
+    "request-promise": "4.2.6",
     "winston": "^3.11.0"
   }
 }
